src/objects/Program_Service__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_of_participants__c</fullName>
        <inlineHelpText>Rate attendance of participants</inlineHelpText>
        <label>Attendance of participants</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Term__c</fullName>
        <label>Course Term</label>
        <picklist>
            <picklistValues>
                <fullName>Term 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <picklist>
            <picklistValues>
                <fullName>ESOL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESOL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESOL 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESOL 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numeracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evidence_Informed__c</fullName>
        <inlineHelpText>Describe how the program was chosen and /or developed? (e.g. did you carry out journal/internet research, undertake training, consult with experts or peers etc)</inlineHelpText>
        <label>Evidence Informed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_for_young_people_who_left__c</fullName>
        <inlineHelpText>If a young person/s left the process, what follow up took place / what changes were made to the approach to reengage them or to respond to their presented needs?</inlineHelpText>
        <label>Follow-up for young people who left</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Profile__c</fullName>
        <label>Group Profile</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_levels_of_participants__c</fullName>
        <inlineHelpText>Rate the interest levels of participants</inlineHelpText>
        <label>Interest levels of participants</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lead staff of this Program/Service</inlineHelpText>
        <label>Lead Staff</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Programs_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needs_Potential_Assessment__c</fullName>
        <inlineHelpText>Outline how the needs/potential where identified and assessed</inlineHelpText>
        <label>Needs/Potential Assessment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Places__c</fullName>
        <label>Number of Places</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_reflection_and_analysis__c</fullName>
        <inlineHelpText>Rate programme/activity reflection and analysis</inlineHelpText>
        <label>Program reflection and analysis</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programme_Activity_Planning__c</fullName>
        <label>Programme/Activity Planning</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_of_Course__c</fullName>
        <label>Status of Course</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_id__c</fullName>
        <label>Title/id</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_EnrolmentsV2__c</fullName>
        <inlineHelpText>Number of Students who are Active or have completed this course (excludes those that dropped out)</inlineHelpText>
        <label>Total Enrolments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Statement__c</fullName>
        <inlineHelpText>Please outline the core values underpinning this programme/action</inlineHelpText>
        <label>Value Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Did_prog_achieve_outcomes__c</fullName>
        <inlineHelpText>Did the programme/activities achieve all stated shrot, medium and lojng term objectives?  If no, please discuss why they were not achieved:</inlineHelpText>
        <label>1. Did prog achieve outcomes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2_Were_there_unexpected_outcomes__c</fullName>
        <inlineHelpText>Were there unexpected outcomes achieved?  If yes please state them and discuss how they came about</inlineHelpText>
        <label>2. Were there unexpected outcomes?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3_Outline_evaluation_by_Young_People__c</fullName>
        <inlineHelpText>Outline how this programme/activity was evaluated by young people and indicate their feedback accordingly:</inlineHelpText>
        <label>3. Outline evaluation by Young People</label>
        <type>TextArea</type>
    </fields>
    <label>Program/Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead_Staff__c</columns>
        <columns>Title_id__c</columns>
        <columns>Status_of_Course__c</columns>
        <columns>Course_Type__c</columns>
        <columns>Course_Term__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_FETAC_Courses</fullName>
        <columns>NAME</columns>
        <columns>Lead_Staff__c</columns>
        <columns>Title_id__c</columns>
        <columns>Status_of_Course__c</columns>
        <columns>Course_Type__c</columns>
        <columns>Course_Term__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FETAC</value>
        </filters>
        <label>All FETAC Courses</label>
    </listViews>
    <nameField>
        <label>Program/Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs/Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>